force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Disbursed_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Disbursed_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Disbursed Amount</description>
    <inlineHelpText>Total amount disbursed/funded to the borrower</inlineHelpText>
    <label>Amount Funded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>