force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Draw_Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>loan__Draw_Billing_Method__c</fullName>
    <inlineHelpText>Billing Method to be used for generating dues during the Draw Term/Period.</inlineHelpText>
    <label>Draw Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>loan__Funding_in_Tranches__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Interest Only</fullName>
            </value>
            <value>
                <fullName>Percentage Of Remaining Balance</fullName>
            </value>
            <value>
                <fullName>Principal Plus Interest</fullName>
            </value>
            <value>
                <fullName>Sliding Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>