force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Draw_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Draw_Period_End_Date__c</fullName>
    <description>Draw Period End Date</description>
    <inlineHelpText>Draw Period End Date is the date for the full/final disbursement</inlineHelpText>
    <label>Draw Period End Date</label>
    <type>Date</type>
</CustomField>