force-app/main/default/objects/loan__Loan_Account__c/fields/loan__draw_term__c.field-meta.xml
<CustomField>
    <fullName>loan__draw_term__c</fullName>
    <description>Draw Term</description>
    <inlineHelpText>This is the period in which the amount can be disbursed to the customer.</inlineHelpText>
    <label>Draw Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>