force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Excess__c.field-meta.xml
<CustomField>
    <fullName>loan__Excess__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Payment Amount which is allocated towards excess on the account.
This amount did not reduce any of the running balance on this account.</inlineHelpText>
    <label>Excess</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>