force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Expected_Disbursal_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Expected_Disbursal_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>This is the expected date on which the loan will be disbursed to the customer, this date will be used to derive the contract date.</inlineHelpText>
    <label>Expected Disbursal Date</label>
    <type>Date</type>
</CustomField>