force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Fee_Set__c.field-meta.xml
<CustomField>
    <fullName>loan__Fee_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fee Set</description>
    <inlineHelpText>Lookup to associate the fee set on this lending account. Only the fees defined within the fee set can be assessed on this contract.
To create a fee set, Servicing configuration-&gt;Product-&gt;Manage fee set</inlineHelpText>
    <label>Fee Set</label>
    <referenceTo>loan__Fee_Set__c</referenceTo>
    <relationshipName>Loan_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>