force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Fees_Billed__c.field-meta.xml
<CustomField>
    <fullName>loan__Fees_Billed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This captures the total fees billed which is calculated at the time of billing.</description>
    <inlineHelpText>This captures the total fees billed which is calculated at the time of billing.</inlineHelpText>
    <label>Fees Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>