force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__Fees_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Fees Paid</description>
    <inlineHelpText>Fees Paid</inlineHelpText>
    <label>Fees Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>