force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Fees_Remaining__c.field-meta.xml
<CustomField>
    <fullName>loan__Fees_Remaining__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Fees Remaining</description>
    <inlineHelpText>Fees remaining</inlineHelpText>
    <label>Fees Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>