force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Floating_Rate_Index__c.field-meta.xml
<CustomField>
    <fullName>loan__Floating_Rate_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Floating Rate Index linked to the Loan Product</inlineHelpText>
    <label>Floating Rate Index</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>loan__Floating_Rate_Index__c.loan__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>loan__Floating_Rate_Index__c</referenceTo>
    <relationshipName>lending_account</relationshipName>
    <type>Lookup</type>
</CustomField>