force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Fractionalization_Status__c.field-meta.xml
<CustomField>
    <fullName>loan__Fractionalization_Status__c</fullName>
    <description>Describes whether loan is activated for Fractionalization.</description>
    <label>Fractionalization Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>