force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Funding_in_Tranches__c.field-meta.xml
<CustomField>
    <fullName>loan__Funding_in_Tranches__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked, if Funding in Tranches is allowed</inlineHelpText>
    <label>Funding in Tranches</label>
    <type>Checkbox</type>
</CustomField>