force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Include_In_Metro2_File__c.field-meta.xml
<CustomField>
    <fullName>loan__Include_In_Metro2_File__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Metro 2 Format is the current standard electronic data reporting format for credit. You can generate a Metro 2 file only when &apos;Include in Metro 2 file&apos; is checked..</inlineHelpText>
    <label>Include In Credit Reporting</label>
    <type>Checkbox</type>
</CustomField>