force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Interest_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Calculation_Method__c</fullName>
    <description>Billing Method.</description>
    <inlineHelpText>Flat - Interest computed every month on the original amount. 
Declining Balance - Interest calculated on the reduced principal balance.
Flexible Repayment - Interest calculated on the reduced principal balance with the change in interest rate.</inlineHelpText>
    <label>Interest Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Declining Balance</fullName>
                <default>true</default>
                <label>Declining Balance</label>
            </value>
            <value>
                <fullName>Flexible Repayment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>