force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Interest_On_Overdue_Suspended__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_On_Overdue_Suspended__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Denotes the total interest on the overdue amount, which has been suspended.</description>
    <inlineHelpText>Denotes the total interest on the overdue amount, which has been suspended.</inlineHelpText>
    <label>Interest On Overdue Suspended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>