force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Interest_Only_Period__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Only_Period__c</fullName>
    <inlineHelpText>In this period only Interest amount will be used to calculate the payment amount, after this period the payment amount will include principal and interest both.</inlineHelpText>
    <label>Interest Only Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>