force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Interest_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Interest Paid
Account Balance Details- System calculated Uneditable fields</description>
    <inlineHelpText>Interest Paid
Account Balance Details- Fields calculated by the system which cannot be edited.</inlineHelpText>
    <label>Interest Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>