force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Interest_Posted__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Posted__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Interest Posted on account</description>
    <inlineHelpText>Interest Posted on account.</inlineHelpText>
    <label>Interest Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>