force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Rate__c</fullName>
    <description>Interest Rate</description>
    <inlineHelpText>Rate of Interest for the loan.</inlineHelpText>
    <label>Current Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>