force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Interest_Rate_Change_Method__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Rate_Change_Method__c</fullName>
    <description>When interest rate is changed, the repayment schedule of the loans will be regenerated either by changing the payment amount or keeping the payment amount same based on this setup option.</description>
    <inlineHelpText>When interest rate is changed, the repayment schedule of the loans will be regenerated either by changing the payment amount or keeping the payment amount same based on this setup option.</inlineHelpText>
    <label>Interest Rate Change Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change Payment Amount</fullName>
            </value>
            <value>
                <fullName>Keep Same Payment Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>