force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Interest_Rate_Last__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Rate_Last__c</fullName>
    <description>Last Interest Rate</description>
    <inlineHelpText>This is the last interest rate that was applied on the loan.</inlineHelpText>
    <label>Last Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>