force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Interest_Rate_on_Due_IOA__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Rate_on_Due_IOA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest Rate on Due IOA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>