force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Interest_Waived__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Waived__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Waived interest Amount on this account.</inlineHelpText>
    <label>Interest Waived</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>