force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Invalid_Data__c.field-meta.xml
<CustomField>
    <fullName>loan__Invalid_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If system identify any data issues with this lending account, the reasons will be displayed on the top of lending account and this flag will be checked.
Once the issues are fixed, this flag will be unchecked by system.
User should not modify this flag.</inlineHelpText>
    <label>Invalid Data</label>
    <type>Checkbox</type>
</CustomField>