force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Is_Interest_Posting_Enabled__c.field-meta.xml
<CustomField>
    <fullName>loan__Is_Interest_Posting_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Interest Posting</label>
    <type>Checkbox</type>
</CustomField>