force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Is_Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>loan__Is_Rescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This flag will be checked once the lending account is rescheduled.
This should not be manually checked/unchecked by the user.</inlineHelpText>
    <label>Rescheduled</label>
    <type>Checkbox</type>
</CustomField>