force-app/main/default/objects/loan__Loan_Account__c/fields/loan__LA_Amortization_Enabled__c.field-meta.xml
<CustomField>
    <fullName>loan__LA_Amortization_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>