force-app/main/default/objects/loan__Loan_Account__c/fields/loan__LA_Amortization_Frequency__c.field-meta.xml
<CustomField>
    <fullName>loan__LA_Amortization_Frequency__c</fullName>
    <label>Amortization Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>