force-app/main/default/objects/loan__Loan_Account__c/fields/loan__LA_Amortized_Balance_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__LA_Amortized_Balance_Type__c</fullName>
    <label>Amortize Balance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interest</fullName>
                <default>true</default>
                <label>Interest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>