force-app/main/default/objects/loan__Loan_Account__c/fields/loan__la_next_amortization_date__c.field-meta.xml
<CustomField>
    <fullName>loan__la_next_amortization_date__c</fullName>
    <label>Next Amortization Date</label>
    <type>Date</type>
</CustomField>