force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Last_Accrual_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Last_Accrual_Date__c</fullName>
    <description>Last accrual Date on loan account</description>
    <inlineHelpText>The date on which Interest was computed and posted on the Account.</inlineHelpText>
    <label>Last Accrual Date</label>
    <type>Date</type>
</CustomField>