force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Last_Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Last_Billed_Amount__c</fullName>
    <label>Last Billed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>