force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Last_Disbursal_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Last_Disbursal_Date__c</fullName>
    <description>Last Disbursal Transaction Date</description>
    <inlineHelpText>Last Disbursal Transaction Date</inlineHelpText>
    <label>Last Disbursal Transaction Date</label>
    <type>Date</type>
</CustomField>