force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Last_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Last_Installment_Date__c</fullName>
    <description>Maturity Date of Loan account</description>
    <inlineHelpText>Maturity date as per contract.</inlineHelpText>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>