force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Last_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Last_Payment_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Last Payment Received on this Account.</inlineHelpText>
    <label>Last Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>