force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Last_Payment_Date__c</fullName>
    <description>Date when last payment was received.</description>
    <inlineHelpText>Date when the  last payment was received.</inlineHelpText>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>