force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Last_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Last_Transaction_Type__c</fullName>
    <inlineHelpText>This shows the last transaction happened on this contract.
This will be populated by system and must not be changed by user.</inlineHelpText>
    <label>Last Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>PrincipalAdjustment-Add</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Additional Repayment</fullName>
            </value>
            <value>
                <fullName>Stop Accrual</fullName>
            </value>
            <value>
                <fullName>Start Accrual</fullName>
            </value>
            <value>
                <fullName>Payment Transaction</fullName>
            </value>
            <value>
                <fullName>Disbursal Transaction</fullName>
            </value>
            <value>
                <fullName>Payment Reversal</fullName>
            </value>
            <value>
                <fullName>Disbursal Reversal</fullName>
            </value>
            <value>
                <fullName>Credit Limit Change</fullName>
            </value>
            <value>
                <fullName>Charge Off</fullName>
            </value>
            <value>
                <fullName>Index Rate Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>