force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Loan_Account_External_Id__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Account_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Loan Account External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>