force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Loan_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Effective_Date__c</fullName>
    <description>Effective Date of Loan account.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>