force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Loan_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loan Product Name</description>
    <inlineHelpText>Please choose a lending product, which will be associated as a lending product on this lending account.
You can choose a existing product from the lookup or create a new product from 
Servicing Configuration-&gt;Product-&gt;Create new lending product</inlineHelpText>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select active lending product.</errorMessage>
        <filterItems>
            <field>loan__Loan_Product__c.loan__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>loan__Loan_Product__c</referenceTo>
    <relationshipName>Loan_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>