force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Purpose__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loan Purpose</description>
    <inlineHelpText>Loan purpose</inlineHelpText>
    <label>Purpose</label>
    <referenceTo>loan__Loan_Purpose__c</referenceTo>
    <relationshipName>Loan_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>