force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Market_Place_Value__c.field-meta.xml
<CustomField>
    <fullName>loan__Market_Place_Value__c</fullName>
    <formula>loan__Loan_Amount__c -  loan__Protect_fee_amount__c + loan__Protect_Split_Charged_To_Investor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Place Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>