force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Maturity_Date_Current__c.field-meta.xml
<CustomField>
    <fullName>loan__Maturity_Date_Current__c</fullName>
    <inlineHelpText>This is the date on which the the loan matures</inlineHelpText>
    <label>Current Maturity Date</label>
    <type>Date</type>
</CustomField>