force-app/main/default/objects/loan__Loan_Account__c/fields/loan__Maximum_Draw_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Maximum_Draw_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Maximum Draw amount which can be given to the customer, applicable for line of credits.</inlineHelpText>
    <label>Maximum Draw Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>